--- a/src/quotalogic.io/index.html
+++ b/src/quotalogic.io/index.html
@@ -96,13 +96,6 @@
     </head>
     <body>
 
-        <!--[if IE]>
-            <div class="browserupgrade">
-                You are using an <strong>outdated</strong> browser.
-                Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
-            </div>
-        <![endif]-->
-
         <header class="header">
             <div class="header__fixed-bar">
                 <div class="header__wrap container container--full-width">
@@ -123,6 +116,13 @@
                 </div>
             </div>
         </header>
+
+        <!--[if IE]>
+        <div class="browser">
+            It appears that you’re using an outdated browser. For this site and most others to work correctly, you need to switch to a modern browser.
+        </div>
+        <![endif]-->
+
         <div class="hero">
             <div class="hero__head">
                 <div class="hero__wrap container">
