ru social texts

--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -58,7 +58,7 @@
 
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Quotalogic</title>
+        <title>Quotcat</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../global/styles/style.css">
 
@@ -72,26 +72,26 @@
         <meta name="theme-color" content="#FFFFFF">
 
         <!-- common -->
-        <meta name="title" content="Quotalogic">
-        <meta name="description" content="Sharing products from many suppliers as easy as sharing music tracks from many artists on cloud services. Combine them into ‘playlist', tune it, use it or share with partners.">
-        <link rel="image_src" href="https://quotalogic.io/favicon/social-media-image-1200x675.jpg">
+        <meta name="title" content="Quotcat">
+        <meta name="description" content="Quotcat – это инструмент, который помогает дилерам эффективно управлять коммерческими предложениями, получая товары и данные для ведения продаж напрямую из каталогов поставщиков">
+        <link rel="image_src" href="https://quotcat.ru/favicon/social-media-image-1200x675.jpg">
 
         <!-- schema.org (google plus) -->
-        <meta itemprop="url" content="https://quotalogic.io">
-        <meta itemprop="image" content="https://quotalogic.io/favicon/social-media-image-1200x675.jpg">
-        <meta itemprop="name" content="Quotalogic">
-        <meta itemprop="description" content="Sharing products from many suppliers as easy as sharing music tracks from many artists on cloud services. Combine them into ‘playlist', tune it, use it or share with partners.">
+        <meta itemprop="url" content="https://quotcat.ru">
+        <meta itemprop="image" content="https://quotcat.ru/favicon/social-media-image-1200x675.jpg">
+        <meta itemprop="name" content="Quotcat">
+        <meta itemprop="description" content="Quotcat – это инструмент, который помогает дилерам эффективно управлять коммерческими предложениями, получая товары и данные для ведения продаж напрямую из каталогов поставщиков">
 
         <!-- ogp.me (facebook & vkontakte) -->
         <meta property="og:type" content="website">
-        <meta property="og:site_name" content="Quotalogic">
-        <meta property="og:url" content="https://quotalogic.io">
-        <meta property="og:image" content="https://quotalogic.io/favicon/social-media-image-1200x675.jpg">
+        <meta property="og:site_name" content="Quotcat">
+        <meta property="og:url" content="https://quotcat.ru">
+        <meta property="og:image" content="https://quotcat.ru/favicon/social-media-image-1200x675.jpg">
         <meta property="og:image:width" content="1200">
         <meta property="og:image:height" content="675">
-        <meta property="og:title" content="Quotalogic">
-        <meta property="og:description" content="Sharing products from many suppliers as easy as sharing music tracks from many artists on cloud services. Combine them into ‘playlist', tune it, use it or share with partners.">
-        <meta property="og:locale" content="en_US">
+        <meta property="og:title" content="Quotcat">
+        <meta property="og:description" content="Quotcat – это инструмент, который помогает дилерам эффективно управлять коммерческими предложениями, получая товары и данные для ведения продаж напрямую из каталогов поставщиков">
+        <meta property="og:locale" content="ru_RU">
 
     </head>
     <body>
@@ -100,7 +100,7 @@
             <div class="header__fixed-bar">
                 <div class="header__wrap container container--full-width">
                     <h1 class="header__emblem logo">
-                        Quotalogic
+                        Quotcat
                     </h1>
                     <nav class="header__nav">
                         <a class="header__link anchor" href="#how-it-works">How it works</a>
@@ -1164,7 +1164,7 @@
                 </div>
                 <div class="footer__secondary">
                     <div class="footer__emblem logo logo--inverted">
-                        Quotalogic
+                        Quotcat
                     </div>
                     <div class="footer__menu">
                         <div class="footer__link">
