--- a/src/quotalogic.io/index.html
+++ b/src/quotalogic.io/index.html
@@ -60,7 +60,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Quotalogic</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../global/styles/style.css">
+        <link rel="stylesheet" href="styles/styles.css">
 
         <!-- Favicons -->
         <link rel="apple-touch-icon" sizes="180x180" href="../global/favicon/apple-touch-icon.png">
