logo, hero, truth translation

--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -60,7 +60,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Quotcat</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../global/styles/style.css">
+        <link rel="stylesheet" href="styles/styles.css">
 
         <!-- Favicons -->
         <link rel="apple-touch-icon" sizes="180x180" href="../global/favicon/apple-touch-icon.png">
@@ -103,12 +103,12 @@
                         Quotcat
                     </h1>
                     <nav class="header__nav">
-                        <a class="header__link anchor" href="#how-it-works">How it works</a>
-                        <a class="header__link anchor" href="#benefits">Benefits</a>
-                        <a class="header__link anchor" href="#numbers">Numbers</a>
-                        <a class="header__link anchor" href="#basics">Basics</a>
-                        <a class="header__link anchor" href="#tariffs">Tariffs</a>
-                        <a class="header__link anchor" href="#contacts">Contacts</a>
+                        <a class="header__link anchor" href="#how-it-works">О продукте</a>
+                        <a class="header__link anchor" href="#benefits">Преимущества</a>
+                        <a class="header__link anchor" href="#numbers">Результаты</a>
+                        <a class="header__link anchor" href="#basics">Принципы</a>
+                        <a class="header__link anchor" href="#tariffs">Тарифы</a>
+                        <a class="header__link anchor" href="#contacts">Контакты</a>
                     </nav>
                     <a class="header__contacts-handler button button--small mfp-handler" href="#demo">
                         <span class="header__book-string">Book a</span> demo
@@ -127,16 +127,16 @@
             <div class="hero__head">
                 <div class="hero__wrap container">
                     <div class="hero__pre-heading">
-                        Streamlined eCommerce:
+                        Динамичный eCommerce:
                     </div>
                     <div class="hero__heading">
-                        Shared Catalogs &&nbsp;Automated Offers
+                        Общие каталоги и&nbsp;быстрые предложения
                     </div>
                     <div class="hero__description">
-                        Quotalogic is a tool that enables dealers to effectively manage commercial proposals, sourcing products and sales insights directly from suppliers' catalogs.
+                        Quotcat – это инструмент, который помогает дилерам эффективно управлять коммерческими предложениями, получая товары и данные для ведения продаж напрямую из каталогов поставщиков
                     </div>
                     <div class="hero__submit shadow">
-                        <a class="button mfp-handler" href="#demo">Book a demo</a>
+                        <a class="button mfp-handler" href="#demo">Запросить демо</a>
                     </div>
                 </div>
             </div>
@@ -144,87 +144,48 @@
         <section class="truth">
             <div class="truth__wrap container">
                 <h2 class="truth__heading title" id="how-it-works">
-                    Life-Connected<br class="desktop-only"> source of truth
+                    Всегда актуальные<br class="desktop-only"> данные о&nbsp;товарах
                 </h2>
                 <div class="truth__description">
-                    Using a single product image across the dealer network facilitates
-                    the&nbsp;collection and generation of rich Collaborative Dealer Network Content:
+                    Снимите нагрузку с дилеров и продавцов, централизованно управляя данными о товаре. Возможность совместной работы над образом товара помогает легко собирать и создавать эффективный контент:
                 </div>
                 <div class="truth__content">
                     <div class="truth__list hide-scrollbar">
                         <span class="feature">
-                            MSR Price
+                            Рекомендованная цена
                         </span>
                         <span class="feature">
-                            Net Price
+                            Закупочная цена
                         </span>
                         <span class="feature">
-                            Street Price
-                            <span class="feature__tag">
-                                Stats’ adjusted
-                            </span>
+                            Рыночная цена
                         </span>
                         <span class="feature">
-                            Price tiering
-                        </span>
-                        <!-- Дублируем этот элемент, чтобы немного изменить порядок на смартфоне -->
-                        <span class="feature smartphone-only" role="presentation" aria-hidden="true">
-                            Images
+                            Персональная цена
                         </span>
                         <span class="feature">
-                            Description
-                            <span class="feature__tag">
-                                AI-Powered
-                            </span>
-                            <span class="feature__tag">
-                                Dealers-Curated
-                            </span>
-                        </span>
-                        <span class="feature desktop-only">
-                            Images
+                            Описание
                         </span>
                         <span class="feature">
-                            Sales pitches
-                        </span>
-                        <!-- Дублируем этот элемент, чтобы немного изменить порядок на смартфоне -->
-                        <span class="feature smartphone-only" role="presentation" aria-hidden="true">
-                            Stock availability
+                            Изображения
                         </span>
                         <span class="feature">
-                            Key selling points
-                            <span class="feature__tag">
-                                AI-Powered
-                            </span>
+                            Ключевые преимущества
                         </span>
                         <span class="feature">
-                            Unique selling propositions
-                        </span>
-                        <span class="feature desktop-only">
-                            Stock availability
+                            Акции
                         </span>
                         <span class="feature">
-                            Task-Fit Tips
-                            <span class="feature__tag">
-                                AI-Powered
-                            </span>
-                            <span class="feature__tag">
-                                Dealers-Curated
-                            </span>
-                        </span>
-                        <span class="feature feature--guy">
-                            Product portfolio
-                            <span class="feature__tag">
-                                Dealers-Curated
-                            </span>
+                            Позиционирование товара
                         </span>
                         <span class="feature">
-                            User-Generated Content
+                            Доступ к эскпертам по продукту
                         </span>
                         <span class="feature">
-                            Chat with product experts
+                            Портфолио
                         </span>
                         <span class="feature feature--girl">
-                            Any custom data
+                            Любые пользовательские данные
                             <span class="feature__sparkles">✨</span>
                         </span>
                     </div>
