truth and feature

--- a/src/quotalogic.io/index.html
+++ b/src/quotalogic.io/index.html
@@ -151,7 +151,7 @@
                     the&nbsp;collection and generation of rich Collaborative Dealer Network Content:
                 </div>
                 <div class="truth__content">
-                    <div class="truth__list hide-scrollbar">
+                    <div class="truth__list">
                         <span class="feature">
                             MSR Price
                         </span>
