--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -150,7 +150,7 @@
                     Снимите нагрузку с дилеров и продавцов, централизованно управляя данными о товаре. Возможность совместной работы над образом товара помогает легко собирать и создавать эффективный контент:
                 </div>
                 <div class="truth__content">
-                    <div class="truth__list hide-scrollbar">
+                    <div class="truth__list">
                         <span class="feature">
                             Рекомендованная цена
                         </span>
@@ -184,9 +184,9 @@
                         <span class="feature">
                             Портфолио
                         </span>
-                        <span class="feature feature--girl">
+                        <span class="feature feature--girl feature--user-data">
                             Любые пользовательские данные
-                            <span class="feature__sparkles">✨</span>
+                            <span class="feature__sparkles desktop-only">✨</span>
                         </span>
                     </div>
                 </div>
