--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -211,30 +211,30 @@
         <section class="networks">
             <div class="networks__body container">
                 <h2 class="networks__heading title">
-                    Empowering<br class="smartphone-only"> Dealer Networks
+                    Усиление<br class="smartphone-only"> дилерских сетей
                 </h2>
                 <div class="networks__description">
-                    Joint catalog usage ensures data relevance in Dealer Networks without the hassle of manual tracking
+                    Работа в общем каталоге помогает поддерживать актуальность<br class="desktop-only"> данных без ручного обновления и лишних затрат
                 </div>
                 <div class="networks__content">
                     <div class="networks__section">
                         <h3 class="networks__sub-heading">
-                            Catalog sharing for wide<br class="desktop-only"> dealers networks
+                            Общие каталоги для крупных дилерских сетей
                         </h3>
                         <ul class="networks__features list list--simpler">
-                            <li class="list__item">Provide your dealers with a ready-to-sell tool packed with your products</li>
-                            <li class="list__item">Collect the real-time product sales analytics in a dealer network</li>
-                            <li class="list__item">Ensure the product data is always up-to-date for everyone in your dealer network</li>
+                            <li class="list__item">Предоставьте дилерам готовый инструмент для продаж, наполненный вашими товарами</li>
+                            <li class="list__item">Собирайте анонимную аналитику о предложении товаров дилерской сетью (скоро)</li>
+                            <li class="list__item">Обеспечьте актуальность данных для всех участников вашей дилерской сети</li>
                         </ul>
                     </div>
                     <div class="networks__section">
                         <h3 class="networks__sub-heading">
-                            Instant access to catalogs<br class="desktop-only"> from a&nbsp;variety of&nbsp;suppliers
+                            Мгновенный доступ к каталогам множества поставщиков
                         </h3>
                         <ul class="networks__features list list--simpler">
-                            <li class="list__item">Take and use products directly through the suppliers' catalogs, promos, pricelists, or quotations</li>
-                            <li class="list__item">Handle comprehensive and always up-to-date product data</li>
-                            <li class="list__item">Combine and re-share product sets with partners and customers using simple drag-n-drop</li>
+                            <li class="list__item">Берите и используйте товары напрямую из каталогов, акций, прайс-листов или предложений поставщиков</li>
+                            <li class="list__item">Работайте с полными и всегда актуальными данными о товарах</li>
+                            <li class="list__item">Собирайте и делитесь подборками товаров с партнерами и клиентами в один клик</li>
                         </ul>
                     </div>
                 </div>
