--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -253,24 +253,24 @@
                 <div class="start__body">
                     <div class="start__section">
                         <b class="start__sub-heading">
-                            Easy start for Distributor
+                            Простой старт для дистрибьюторов
                         </b>
                         <div class="start__description">
-                            Connect an existing data source or create a&nbsp;product set. Personalise it and share with dealers in an interactive way.
+                            Подключите каталог из существующего источника или создайте набор товаров. Персонализируйте его и делитесь с дилерами в интерактивном формате.
                         </div>
                     </div>
                     <div class="start__section">
                         <b class="start__sub-heading">
-                            Easier launch for Dealers
+                            Легкий запуск для дилеров
                         </b>
                         <div class="start__description">
-                            Join your supplier's ready-to-use catalog in one<br class="desktop-only"> click. No API needed, no coding, no file-parsing,<br class="desktop-only"> no set-up: just choose and sell.
+                            Подключитесь к готовому каталогу вашего поставщика в один клик. Никаких API, кода, обработки файлов или настроек — просто выбирайте и продавайте.
                         </div>
                     </div>
                 </div>
                 <div class="start__footer">
                     <a class="button mfp-handler" href="#demo">
-                        Start Now
+                        Начать сейчас
                     </a>
                 </div>
                 <picture>
