--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -111,7 +111,7 @@
                         <a class="header__link anchor" href="#contacts">Контакты</a>
                     </nav>
                     <a class="header__contacts-handler button button--small mfp-handler" href="#demo">
-                        <span class="header__book-string">Book a</span> demo
+                        <span class="header__book-string">Запросить</span> демо
                     </a>
                 </div>
             </div>
