--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -287,7 +287,7 @@
         </div>
         <section class="sharing container">
             <h2 class="sharing__heading title">
-                Sharing Sales Boosters
+                Совместное использование инструментов для увеличения продаж
             </h2>
             <div class="sharing__body">
                 <div class="sharing__preview">
@@ -297,8 +297,8 @@
                     </video>
                 </div>
                 <div class="sharing__description wysiwyg">
-                    <p>Share promotions, sales pitches and key selling points, unique selling propositions and experts chat channel attached to the product.</p>
-                    <p>This isn't just about sharing data — it's about turning product information into a dynamic sales toolkit, providing dealers with everything they need for effective representation and successful sales.</p>
+                    <p>Делитесь акциями, презентациями для продаж и ключевыми преимуществами, уникальными торговыми предложениями и каналом для общения с экспертами прямо в карточке товара.</p>
+                    <p>Это не просто обмен данными — это превращение информации о продукте в удобный инструмент, который даёт дилерам всё, что нужно для успешных продаж.</p>
                 </div>
             </div>
         </section>
