--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -305,7 +305,7 @@
         <section class="catalog">
             <div class="catalog__wrap container">
                 <h2 class="catalog__heading title">
-                    Combine →&nbsp;Tune →&nbsp;Share
+                    Собери →&nbsp;Настрой →&nbsp;Поделись
                 </h2>
                 <div class="catalog__body">
                     <div class="catalog__preview">
@@ -315,9 +315,9 @@
                         </video>
                     </div>
                     <div class="catalog__description wysiwyg">
-                        <p>Combine new sets of products using many suppliers catalogs, price lists, promotions, commercial proposals – and share them with your partners. Make it as easy as you share music tracks on cloud services – combining them into ‘playlists', tuning it, and sharing with friends.</p>
-                        <p>The dynamic data model allows you to forget about the need to update products: they will be continuously updated by the supplier.</p>
-                        <p>Business proposals generation has never been faster and easier.</p>
+                        <p>Собирайте новые наборы товаров из каталогов, прайс-листов, акций и коммерческих предложений разных поставщиков и делитесь ими с партнерами. Это так же просто, как делиться музыкальными треками в облачных сервисах — создавайте "плейлисты", настраивайте их и отправляйте друзьям.</p>
+                        <p>Динамическая модель данных избавляет вас от необходимости обновлять товары: поставщики сделают это автоматически.</p>
+                        <p>Создание коммерческих предложений стало быстрее и проще, чем когда-либо.</p>
                     </div>
                 </div>
             </div>
