--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -325,10 +325,10 @@
         <section class="sales">
             <div class="sales__wrap container">
                 <h2 class="sales__heading title">
-                    A central point of&nbsp;sales
+                    Центр управления продажами
                 </h2>
                 <div class="sales__description">
-                    Streamline your proposal process like never before in a Quote Management System:
+                    Оптимизируйте процесс продаж как никогда раньше<br class="desktop-only"> с помощью системы управления коммерческими предложениями:
                 </div>
                 <div class="sales__video">
                     <iframe class="sales__iframe" src="https://www.youtube.com/embed/jT0ZZKZ93P8?si=ZalhNnX3RxSqvm6W" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -338,43 +338,38 @@
                         <div class="sales__list">
                             <div class="sales__item">
                                 <h3 class="sales__sub-heading">
-                                    Speed up the proposal process to seconds:
+                                    Ускорьте создание предложений до секунд
                                 </h3>
                                 <ul class="sales__features list list--simpler">
-                                    <li class="list__item">Automated proposals with real-time supplier products</li>
-                                    <li class="list__item">Broadcast supplier deals and USPs</li>
-                                    <li class="list__item">AI-Powered Insights</li>
+                                    <li class="list__item">Автоматические предложения с актуальными товарами от поставщиков</li>
+                                    <li class="list__item">Трансляция акций и уникальных предложений поставщиков</li>
                                 </ul>
                             </div>
                             <div class="sales__item">
                                 <h3 class="sales__sub-heading">
-                                    Tailor proposals for better deal success:
+                                    Настройка для лучшего результата:
                                 </h3>
                                 <ul class="sales__features list list--simpler">
-                                    <li class="list__item">Templates and Mobile accessibility</li>
-                                    <li class="list__item">Multi-Currency and Multi-language support</li>
-                                    <li class="list__item">Integrated with eSign and Key financial services</li>
+                                    <li class="list__item">Удобные шаблоны и доступ с мобильных устройств</li>
+                                    <li class="list__item">Поддержка мультивалютности и мультиязычности</li>
                                 </ul>
                             </div>
                             <div class="sales__item">
                                 <h3 class="sales__sub-heading">
-                                    Enhance presentation of complex products:
+                                    Улучшите презентацию сложных продуктов:
                                 </h3>
                                 <ul class="sales__features list list--simpler">
-                                    <li class="list__item">Supplier’s Sales Pitches and Key Selling Points</li>
-                                    <li class="list__item">Direct chat with Experts and Sales</li>
-                                    <li class="list__item">Customer-Configurable commercial proposals</li>
+                                    <li class="list__item">Презентации и ключевые преимущества от поставщиков</li>
+                                    <li class="list__item">Прямой чат с экспертами и отделом продаж <em>(Скоро)</em></li>
                                 </ul>
                             </div>
                             <div class="sales__item">
                                 <h3 class="sales__sub-heading">
-                                    Control the process:
+                                    Контролируйте процесс:
                                 </h3>
                                 <ul class="sales__features list list--simpler">
-                                    <li class="list__item">Approval workflow and Automated follow-ups</li>
-                                    <li class="list__item">Collaboration Tools and Revision tracking</li>
-                                    <li class="list__item">Exportable proposal data</li>
-                                    <li class="list__item">Real-time analytics</li>
+                                    <li class="list__item">Инструменты для совместной работы и отслеживание изменений</li>
+                                    <li class="list__item">Экспорт данных во внешние CMS</li>
                                 </ul>
                             </div>
                         </div>
