--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -398,13 +398,13 @@
         <section class="cta">
             <div class="cta__wrap container">
                 <h2 class="cta__heading title">
-                    Form your catalog<br class="desktop-only"> and start selling right&nbsp;now
+                    Подключите каталоги<br class="desktop-only">и начните продавать прямо сейчас
                 </h2>
                 <a class="cta__submit button button--inverted mfp-handler" href="#demo">
-                    Book a demo
+                    Запросить демо
                 </a>
                 <div class="cta__note">
-                    start for free
+                    начать бесплатно
                 </div>
             </div>
         </section>
