--- a/src/quotcat.ru/index.html
+++ b/src/quotcat.ru/index.html
@@ -411,11 +411,11 @@
         <section class="benefits container container--wide">
             <div class="benefits__navigation">
                 <h2 class="benefits__heading title" id="benefits">
-                    Benefits&nbsp;for
+                    Преимущества&nbsp;для
                 </h2>
                 <div class="benefits__tabs">
-                    <button class="benefits__tag benefits__tag--current" type="button">Distributor and Manufacturer</button>
-                    <button class="benefits__tag" type="button">Dealer and Seller</button>
+                    <button class="benefits__tag benefits__tag--current" type="button">Дистрибьютора и Производителя</button>
+                    <button class="benefits__tag" type="button">Дилера и Продавца</button>
                 </div>
             </div>
             <div class="benefits__body">
@@ -423,12 +423,12 @@
                     <div class="benefits__screen benefits__screen--accent">
                         <div class="benefits__summary">
                             <ul class="benefits__features list list--white">
-                                <li class="list__item">Distribute personalised data and promotions throughout the dealer chain with ease.</li>
-                                <li class="list__item">Boost the effectiveness of advertisements with instant updates.</li>
-                                <li class="list__item">Simplify the promotion of high-value goods by sharing unique sales pitches and selling propositions.</li>
-                                <li class="list__item">Reduce salespeople's dependency on technical skills by providing customers with direct chat access to technical experts in conjunction with the product.</li>
-                                <li class="list__item">Stay in touch with the market: gain seamless product usage statistics within the dealer chain.</li>
-                                <li class="list__item">Support dealers with advanced enterprise sales tools they may not have access to themselves.</li>
+                                <li class="list__item">Распределяйте персонализированные данные и акции по всей дилерской сети с лёгкостью.</li>
+                                <li class="list__item">Повышайте эффективность рекламы с мгновенными обновлениями.</li>
+                                <li class="list__item">Упростите продвижение товаров с высокой добавленной стоимостью, делясь уникальными презентациями и торговыми предложениями.</li>
+                                <li class="list__item">Снижайте зависимость продавцов от технических навыков, предоставляя клиентам доступ к чату с техническими экспертами прямо на странице продукта <em>(Скоро)</em></li>
+                                <li class="list__item">Будьте в курсе рынка: получайте статистику по использованию товаров в дилерской сети <em>(Скоро)</em></li>
+                                <li class="list__item">Поддерживайте дилеров продвинутыми инструментами продаж корпоративного уровня</li>
                             </ul>
                         </div>
                         <picture>
@@ -449,12 +449,12 @@
                     <div class="benefits__screen benefits__screen--alternate">
                         <div class="benefits__summary">
                             <ul class="benefits__features list">
-                                <li class="list__item">Have a central source of always up-to-date product data. No need to duplicate the supplier’s product data and worry about keeping it updated.</li>
-                                <li class="list__item">Use built-in sales and quotation tools based on ready-to-sell supplier catalogs. Accept payments, generate invoices, and sign contracts quickly and easily.</li>
-                                <li class="list__item">Start working with new suppliers faster and more efficiently with no data parsing needed.</li>
-                                <li class="list__item">Demonstrate product knowledge using sales pitches and expert advice provided by the suppliers.</li>
-                                <li class="list__item">Effortlessly distribute products from multiple suppliers to sub-dealers, bypassing content management.</li>
-                                <li class="list__item">Boost your sales process by leveraging your own data, ensuring fast and effective quoting even for products where supplier information is not readily available.</li>
+                                <li class="list__item">Получите единый источник актуальных данных о продуктах. Больше не нужно дублировать данные поставщика и беспокоиться об их обновлении.</li>
+                                <li class="list__item">Работайте с новыми поставщиками быстрее и эффективнее без необходимости обработки данных.</li>
+                                <li class="list__item">Используйте встроенные инструменты для создания предложений на основе готовых каталогов поставщиков.</li>
+                                <li class="list__item">Демонстрируйте знания о продуктах с помощью презентаций и советов от экспертов, предоставленных поставщиками (Скоро)</li>
+                                <li class="list__item">Легко распространяйте товары от нескольких поставщиков среди своих субдилеров, избегая управления контентом.</li>
+                                <li class="list__item">Настраивайте товары поставщиков и создавайте собственные продукты</li>
                             </ul>
                         </div>
                         <picture>
